# apigate-benchmark

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
auth-service/: .env.example  Dockerfile  README.md  go.mod  go.sum  main.go
auth-service/internal/config/: config.go
auth-service/internal/security/: security.go
auth-service/internal/server/: handlers.go  response.go  server.go
auth-service/internal/users/: store.go
data-service/: .dockerignore  .env  Dockerfile  README.md  go.mod  go.sum  main.go
data-service/internal/products/: store.go
data-service/internal/server/: handlers.go  response.go  server.go
gateway-apigate/: .dockerignore  .env  .env.docker  Cargo.toml  Dockerfile  README.md
gateway-apigate/src/: auth_client.rs  config.rs  hooks.rs  main.rs  routes.rs
gateway-apisix/: Dockerfile  README.md  apisix.yaml  config.yaml
gateway-apisix/lua/: require_auth.lua  transforms.lua
gateway-kong/: Dockerfile  README.md  kong.yml
gateway-kong/lua/: require_auth.lua  transforms.lua
gateway-python/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt  setup.cfg
gateway-python/.github/workflows/: ci.yml
gateway-python/apigate_bench/: __init__.py  auth_client.py  common.py  gateway.py  schemas.py  settings.py
gateway-python/scripts/: run.sh
load-tests/: README.md  RESULTS.md  run.sh
load-tests/k6/: scenario.js
load-tests/k6/lib/: profiles.js  routes.js  summary.js
load-tests/scripts/: collect_resources.py
