[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
apigate = "0.2.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.14", default-features = false }
humantime-serde = "1"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
